Assignments(Complete) and Application

--- a/Product Inventory System/dashboard.html
+++ b/Product Inventory System/dashboard.html
@@ -6,6 +6,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="./css/dashboard.css">
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+        google.charts.load("current", { packages: ["corechart"] });
+        google.charts.setOnLoadCallback(drawChart);
+        function drawChart() {
+            var data = google.visualization.arrayToDataTable([
+                ['Dinosaur', 'Length'],
+                ['Acrocanthosaurus (top-spined lizard)', 12.2],
+                ['Albertosaurus (Alberta lizard)', 9.1],
+                ['Allosaurus (other lizard)', 12.2],
+                ['Apatosaurus (deceptive lizard)', 22.9],
+                ['Archaeopteryx (ancient wing)', 0.9],
+                ['Argentinosaurus (Argentina lizard)', 36.6],
+                ['Baryonyx (heavy claws)', 9.1],
+                ['Brachiosaurus (arm lizard)', 30.5],
+                ['Ceratosaurus (horned lizard)', 6.1],
+                ['Coelophysis (hollow form)', 2.7],
+                ['Compsognathus (elegant jaw)', 0.9],
+                ['Deinonychus (terrible claw)', 2.7],
+                ['Diplodocus (double beam)', 27.1],
+                ['Dromicelomimus (emu mimic)', 3.4],
+                ['Gallimimus (fowl mimic)', 5.5],
+                ['Mamenchisaurus (Mamenchi lizard)', 21.0],
+                ['Megalosaurus (big lizard)', 7.9],
+                ['Microvenator (small hunter)', 1.2],
+                ['Ornithomimus (bird mimic)', 4.6],
+                ['Oviraptor (egg robber)', 1.5],
+                ['Plateosaurus (flat lizard)', 7.9],
+                ['Sauronithoides (narrow-clawed lizard)', 2.0],
+                ['Seismosaurus (tremor lizard)', 45.7],
+                ['Spinosaurus (spiny lizard)', 12.2],
+                ['Supersaurus (super lizard)', 30.5],
+                ['Tyrannosaurus (tyrant lizard)', 15.2],
+                ['Ultrasaurus (ultra lizard)', 30.5],
+                ['Velociraptor (swift robber)', 1.8]]);
+
+            var options = {
+                title: 'Lengths of dinosaurs, in meters',
+                legend: { position: 'none' },
+            };
+
+            var option1 = {
+                title: 'Country Populations',
+                legend: { position: 'none' },
+                colors: ['green'],
+            };
+
+            var option2 = {
+                title: 'Country Populations',
+                legend: { position: 'none' },
+                colors: ['#e7711c'],
+                histogram: { lastBucketPercentile: 5 },
+                vAxis: { scaleType: 'mirrorLog' }
+            };
+
+            var chart = new google.visualization.Histogram(document.getElementById('chart_div'));
+            chart.draw(data, options);
+
+            var chart = new google.visualization.Histogram(document.getElementById('chart_di'));
+            chart.draw(data, option1);
+
+            var chart = new google.visualization.Histogram(document.getElementById('chart_d'));
+            chart.draw(data, option2);
+        }
+    </script>
 </head>
 
 <body>
@@ -26,15 +91,30 @@
     </header>
     <div class="row">
         <div class="columns">
-            <section id="feature"><p>Featuring</p></section>
-            <section id="category"><p>Category</p></section>
-            <section id="vendor"><p>Vendor</p></section>
-            <section id="stats"><p>Monthly Statistics</p></section>
-            <section id="sub"><p>Sub-Category</p></section>
-            <section id="inventory"><p>Inventory Management</p></section>
+            <section id="feature">
+                <p>Featuring</p>
+                <div id="chart_div"></div>
+            </section>
+            <section id="category">
+                <p>Category</p>
+                <div id="chart_di"></div>
+            </section>
+            <section id="vendor">
+                <p>Vendor</p>
+                <div id="chart_d"></div>
+            </section>
+            <section id="stats">
+                <p>Monthly Statistics</p>
+            </section>
+            <section id="sub">
+                <p>Sub-Category</p>
+            </section>
+            <section id="inventory">
+                <p>Inventory Management</p>
+            </section>
         </div>
     </div>
-    
+
     <footer>
         <p>Copyright &copy; Rishabh</p>
     </footer>
