--- a/Product Inventory System/product.html
+++ b/Product Inventory System/product.html
@@ -9,65 +9,33 @@
 </head>
 
 <body>
-    <div class="header">
-            <div class="element">
-                <p>DASHBOARD</p>
-            </div>
-            <div class="elements">
-                <img class="profile" src="./image/profile-icon-9.png">
-            </div>
-
-            <div class="elements">
-                <p>Welcome User</p>
-            </div>
-
-            <div class="elements">
-                <input type="search" placeholder="Search">
-            </div>
-    </div>
-
-    <div class="columns">
-        <div class="blocks">
-            <aside id="feature">
-                <h2>Featuring</h2>
-            </aside>
+    <header>
+        <div class="element">
+            <p>DASHBOARD</p>
         </div>
-        <div class="blocks">
-            <section id="category">
-                <h2>Category</h2>
-            </section>
-        </div>
-        <div class="blocks">
-            <aside id="stories">
-                <h2>Stories</h2>
-            </aside>
-        </div>
-        <div class="blocks">
-            <aside id="management">
-                <h2>Inventory Management</h2>
-            </aside>
-        </div>
-        <div class="blocks">
-            <article id="statistics">
-                <h2>Monthly Statistics</h2>
-            </article>
-        </div>
-        <div class="blocks">
-            <article id="sub">
-                <h2>Sub-Category</h2>
-            </article>
-        </div>
-        <div class="blocks">
-            <section id="status">
-                <h2>Status</h2>
-            </section>
-        </div>
-        <div class="blocks">
-            <aside id="recent">
-                <h2>Recently Reviewed</h2>
-            </aside>
+        <div class="tables">
+            <table>
+                <tr>
+                    <td><input type="search" placeholder="Search"></td>
+                    <td>
+                        <p>Welcome User</p>
+                    </td>
+                    <td><img class="profile" src="./image/profile-icon-9.png" alt="./image/profile-icon-9.png"></td>
+                </tr>
+            </table>
+    </header>
+    <div class="row">
+        <div class="columns">
+            <section id="feature"></section>
+            <section id="category"><p>Category</p></section>
+            <section id="vendor"><p>Vendor</p></section>
+            <section id="stats"><p>Monthly Statistics</p></section>
+            <section id="sub"><p>Sub-Category</p></section>
+            <section id="inventory"><p>Inventory Management</p></section>
         </div>
     </div>
+    
+
     <footer>
         <p>Copyright &copy; Rishabh</p>
     </footer>
