Assignments(Complete) and Usecase

--- a/Product Inventory System/dashboard.html
+++ b/Product Inventory System/dashboard.html
@@ -165,7 +165,7 @@
                 <p>Sub-Category</p>
                 <div id="char"></div>
             </section>
-            <section id="inventory">
+            <section id="inventory" onclick="location.href='inventory.html'">
                 <p>Inventory Management</p>
                 <div id="cha"></div>
             </section>
