--- a/Product Inventory System/inventory.html
+++ b/Product Inventory System/inventory.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
-    <link rel="stylesheet" href="./css/dashboard.css">
+    <title>Inventory</title>
+    <link rel="stylesheet" href="./css/inventory.css">
 </head>
 
 <body>
     <header>
         <div class="element">
-            <p>DASHBOARD</p>
+            <p>INVENTORY</p>
         </div>
         <div class="tables">
-            <table>
+            <table id="menu">
                 <tr>
                     <td><input type="search" placeholder="Search"></td>
                     <td>
@@ -25,16 +25,84 @@
             </table>
     </header>
     <div class="row">
-        <div class="columns">
-            <section id="feature"><p>Featuring</p></section>
-            <section id="category"><p>Category</p></section>
-            <section id="vendor"><p>Vendor</p></section>
-            <section id="stats"><p>Monthly Statistics</p></section>
-            <section id="sub"><p>Sub-Category</p></section>
-            <section id="inventory"><p>Inventory Management</p></section>
-        </div>
+        <table id="product">
+            <thead>
+                <th>Product Name</th>
+                <th>Rating</th>
+                <th>Sub-Cateogory</th>
+                <th>Price</th>
+                <th>Qty Left</th>
+                <th>Qty Sold</th>
+                <th>Action</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Name</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Name</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Name</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Name</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Name</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Name</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Name</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
-    
+
     <footer>
         <p>Copyright &copy; Rishabh</p>
     </footer>
