Assignments(Complete) and Usecase

--- a/Product Inventory System/addproduct.html
+++ b/Product Inventory System/addproduct.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
-    <link rel="stylesheet" href="./css/dashboard.css">
+    <title>ADD PRODUCT</title>
+    <link rel="stylesheet" href="./css/addproduct.css">
 </head>
 
 <body>
     <header>
         <div class="element">
-            <p>DASHBOARD</p>
+            <p>INVENTORY MANAGEMENT</p>
         </div>
         <div class="tables">
             <table>
@@ -25,16 +25,30 @@
             </table>
     </header>
     <div class="row">
-        <div class="columns">
-            <section id="feature"><p>Featuring</p></section>
-            <section id="category"><p>Category</p></section>
-            <section id="vendor"><p>Vendor</p></section>
-            <section id="stats"><p>Monthly Statistics</p></section>
-            <section id="sub"><p>Sub-Category</p></section>
-            <section id="inventory"><p>Inventory Management</p></section>
-        </div>
+        <form>
+            <fieldset>
+                <legend>ADD PRODUCT</legend>
+                <label for="fname">First name:</label>
+                <input type="text" id="fname" name="fname"><br><br>
+                <label for="fname">First name:</label>
+                <input type="text" id="fname" name="fname"><br><br>
+                <label for="fname">First name:</label>
+                <input type="text" id="fname" name="fname"><br><br>
+                <label for="fname">First name:</label>
+                <input type="text" id="fname" name="fname"><br><br>
+                <label for="fname">First name:</label>
+                <input type="text" id="fname" name="fname">
+                <label for="fname">First name:</label>
+                <input type="text" id="fname" name="fname"><br><br>
+                <label for="fname">First name:</label>
+                <input type="text" id="fname" name="fname">
+                <label for="fname">First name:</label>
+                <input type="text" id="fname" name="fname"><br><br>
+                <button>Add</button>
+            </fieldset>
+        </form>
     </div>
-    
+
     <footer>
         <p>Copyright &copy; Rishabh</p>
     </footer>
