--- a/Product Inventory System/addproduct.html
+++ b/Product Inventory System/addproduct.html
@@ -28,21 +28,21 @@
         <form>
             <fieldset>
                 <legend>ADD PRODUCT</legend>
-                <label for="fname">First name:</label>
+                <label for="fname">Details:</label>
                 <input type="text" id="fname" name="fname"><br><br>
-                <label for="fname">First name:</label>
+                <label for="fname">Details:</label>
                 <input type="text" id="fname" name="fname"><br><br>
-                <label for="fname">First name:</label>
+                <label for="fname">Details:</label>
                 <input type="text" id="fname" name="fname"><br><br>
-                <label for="fname">First name:</label>
+                <label for="fname">Details:</label>
                 <input type="text" id="fname" name="fname"><br><br>
-                <label for="fname">First name:</label>
+                <label for="fname">Details:</label>
                 <input type="text" id="fname" name="fname">
-                <label for="fname">First name:</label>
+                <label for="fname">Details:</label>
                 <input type="text" id="fname" name="fname"><br><br>
-                <label for="fname">First name:</label>
+                <label for="fname">Details:</label>
                 <input type="text" id="fname" name="fname">
-                <label for="fname">First name:</label>
+                <label for="fname">Details:</label>
                 <input type="text" id="fname" name="fname"><br><br>
                 <button>Add</button>
             </fieldset>
