--- a/Product Inventory System/addproduct.html
+++ b/Product Inventory System/addproduct.html
@@ -28,23 +28,25 @@
         <form>
             <fieldset>
                 <legend>ADD PRODUCT</legend>
-                <label for="fname">Details:</label>
-                <input type="text" id="fname" name="fname"><br><br>
-                <label for="fname">Details:</label>
-                <input type="text" id="fname" name="fname"><br><br>
-                <label for="fname">Details:</label>
-                <input type="text" id="fname" name="fname"><br><br>
-                <label for="fname">Details:</label>
-                <input type="text" id="fname" name="fname"><br><br>
-                <label for="fname">Details:</label>
-                <input type="text" id="fname" name="fname">
-                <label for="fname">Details:</label>
-                <input type="text" id="fname" name="fname"><br><br>
-                <label for="fname">Details:</label>
-                <input type="text" id="fname" name="fname">
-                <label for="fname">Details:</label>
-                <input type="text" id="fname" name="fname"><br><br>
-                <button>Add</button>
+                <div class="columns">
+                    <label for="fname">Details:</label>
+                    <input type="text" id="fname" name="fname"><br><br>
+                    <label for="fname">Details:</label>
+                    <input type="text" id="fname" name="fname"><br><br>
+                    <label for="fname">Details:</label>
+                    <input type="text" id="fname" name="fname"><br><br>
+                    <label for="fname">Details:</label>
+                    <input type="text" id="fname" name="fname"><br><br>
+                    <label for="fname">Details:</label>
+                    <input type="text" id="fname" name="fname">
+                    <label for="fname">Details:</label>
+                    <input type="text" id="fname" name="fname"><br><br>
+                    <label for="fname">Details:</label>
+                    <input type="text" id="fname" name="fname">
+                    <label for="fname">Details:</label>
+                    <input type="text" id="fname" name="fname"><br><br>
+                 </div>
+                    <button>Add</button>
             </fieldset>
         </form>
     </div>
