Assignments(Complete) and Usecase

--- a/Product Inventory System/addproduct.html
+++ b/Product Inventory System/addproduct.html
@@ -38,11 +38,11 @@
                     <label for="fname">Details:</label>
                     <input type="text" id="fname" name="fname"><br><br>
                     <label for="fname">Details:</label>
-                    <input type="text" id="fname" name="fname">
+                    <input type="text" id="fname" name="fname"><br><br>
                     <label for="fname">Details:</label>
                     <input type="text" id="fname" name="fname"><br><br>
                     <label for="fname">Details:</label>
-                    <input type="text" id="fname" name="fname">
+                    <input type="text" id="fname" name="fname"><br><br>
                     <label for="fname">Details:</label>
                     <input type="text" id="fname" name="fname"><br><br>
                  </div>
