Assignments(Complete) and Usecase

--- a/Product Inventory System/inventory.html
+++ b/Product Inventory System/inventory.html
@@ -35,8 +35,8 @@
                 <th>Qty Sold</th>
                 <th>Action</th>
             </thead>
-            <tbody>
-                <tr>
+            <tbody onclick="location.href='product.html'">
+                <tr >
                     <td>Name</td>
                     <td></td>
                     <td></td>
