--- a/Product Inventory System/product.html
+++ b/Product Inventory System/product.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Product Description</title>
     <link rel="stylesheet" href="./css/dashboard.css">
 </head>
 
 <body>
     <header>
         <div class="element">
-            <p>DASHBOARD</p>
+            <p>PRODUCT DETAILS</p>
         </div>
         <div class="tables">
             <table>
@@ -25,13 +25,7 @@
             </table>
     </header>
     <div class="row">
-        <div class="columns">
-            <section id="feature"></section>
-            <section id="category"><p>Category</p></section>
-            <section id="vendor"><p>Vendor</p></section>
-            <section id="stats"><p>Monthly Statistics</p></section>
-            <section id="sub"><p>Sub-Category</p></section>
-            <section id="inventory"><p>Inventory Management</p></section>
+        <div class="product">
         </div>
     </div>
     
